[workspace]
members = [
    "crates/app",
    "crates/auth",
    "crates/engine",
    "crates/exec",
    "crates/loadtest",
    "crates/macros",
    "crates/mempool",
    "crates/rpc",
    "crates/state",
    "crates/tx",
    "crates/types",
]
resolver = "2"

[workspace.package]
authors = []
edition = "2024"
license = "Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
# Core dependencies
anyhow     = "1.0"
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror  = "2.0"
tokio      = { version = "1.47", features = ["full"] }

# Alloy for EVM compatibility
alloy              = { version = "1", features = ["full"] }
alloy-consensus    = "1"
alloy-primitives   = { version = "1", features = ["serde"] }
alloy-signer       = "1"
alloy-signer-local = "1"

# Crypto
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
rand = "0.9"

# Fast random for async contexts
fastrand = "2.3"

# Binary encoding
bincode = { version = "2.0", features = ["derive", "serde"] }
borsh   = { version = "1.5", features = ["derive"] }

# Web framework
axum       = { version = "0.8", features = ["ws"] }
hyper      = "1.7"
reqwest    = { version = "0.12", features = ["json"] }
tower      = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# State management
hex      = "0.4"
jmt      = "0.11.0"
log      = "0.4"
num_cpus = "1.17"
rocksdb  = "0.24"
sha2     = "0.10"

# CLI
clap               = { version = "4.5", features = ["derive"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Monitoring and observability
prometheus = "0.14"

# Rate limiting and middleware
governor = "0.10"

# Testing and benchmarking
chrono       = "0.4"
criterion    = "0.7"
hdrhistogram = "7.5"
tempfile     = "3.23"
uuid         = { version = "1.18", features = ["v7"] }

# Cloud storage for snapshots
aws-config           = "1.8"
aws-sdk-s3           = "1.8"
bytes                = "1.10"
flate2               = "1.1"
google-cloud-storage = "1.1.0"
lz4                  = "1.28"
tar                  = "0.4"
zstd                 = "0.13"

# gRPC
prost             = "0.14"
prost-build       = "0.14"
prost-types       = "0.14"
tonic             = "0.14"
tonic-build       = "0.14"
tonic-prost       = "0.14"
tonic-prost-build = "0.14"

# Internal workspace crates
pranklin-app      = { path = "./crates/app" }
pranklin-auth     = { path = "./crates/auth" }
pranklin-engine   = { path = "./crates/engine" }
pranklin-exec     = { path = "./crates/exec" }
pranklin-loadtest = { path = "./crates/loadtest" }
pranklin-macros   = { path = "./crates/macros" }
pranklin-mempool  = { path = "./crates/mempool" }
pranklin-rpc      = { path = "./crates/rpc" }
pranklin-state    = { path = "./crates/state" }
pranklin-tx       = { path = "./crates/tx" }
pranklin-types    = { path = "./crates/types" }
