[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name              = "pranklin-auth"
version.workspace = true

[dependencies]
alloy-primitives.workspace   = true
alloy-signer.workspace       = true
alloy-signer-local.workspace = true
serde.workspace              = true
sha2.workspace               = true
thiserror.workspace          = true
tokio.workspace              = true

pranklin-tx.workspace = true
