[package]
edition.workspace = true
license.workspace = true
name              = "pranklin-exec"
version.workspace = true

[dependencies]
alloy-primitives.workspace = true
anyhow.workspace           = true
log.workspace              = true
prost.workspace            = true
prost-types.workspace      = true
reqwest.workspace          = true
serde.workspace            = true
thiserror.workspace        = true
tokio.workspace            = true
tonic.workspace            = true
tonic-prost.workspace      = true
tracing.workspace          = true

pranklin-auth.workspace    = true
pranklin-engine.workspace  = true
pranklin-mempool.workspace = true
pranklin-state.workspace   = true
pranklin-tx.workspace      = true
pranklin-types.workspace   = true

[build-dependencies]
tonic-prost-build.workspace = true

[dev-dependencies]
criterion.workspace = true
tempfile.workspace  = true
