[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name              = "pranklin-loadtest"
version.workspace = true

[[bin]]
name = "pranklin-loadtest"
path = "src/main.rs"

[dependencies]
alloy-primitives.workspace   = true
anyhow.workspace             = true
chrono.workspace             = true
clap.workspace               = true
fastrand.workspace           = true
hdrhistogram.workspace       = true
hex.workspace                = true
k256.workspace               = true
pranklin-auth.workspace      = true
pranklin-tx.workspace        = true
rand.workspace               = true
reqwest.workspace            = true
serde.workspace              = true
serde_json.workspace         = true
tokio.workspace              = true
tracing.workspace            = true
tracing-subscriber.workspace = true
