[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name              = "pranklin-tx"
version.workspace = true

[dependencies]
alloy-primitives = { workspace = true, features = ["borsh"] }
borsh            = { workspace = true }
hex              = { workspace = true }
serde            = { workspace = true }
sha2             = { workspace = true }
thiserror        = { workspace = true }
