[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name              = "pranklin-types"
version.workspace = true

[dependencies]
alloy-primitives = { workspace = true, features = ["borsh"] }
borsh            = { workspace = true }
hex              = { workspace = true }
jmt              = { workspace = true }
pranklin-macros  = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
sha2             = { workspace = true }
thiserror        = { workspace = true }
